web/src/styles/custom.css
/* Custom MTA Wiki CSS */
:root {
    --color-type-shared: rgba(47, 135, 212, 1);
    --color-type-shared-background: rgba(117, 117, 255, 0.05);
    --color-type-shared-background-high-dark: rgb(39, 112, 175);
    --color-type-shared-background-high-light: rgba(50, 159, 255, 0.549);
    --color-type-client: rgba(221, 91, 91, 1);
    --color-type-client-background: rgba(255, 50, 50, 0.05);
    --color-type-client-background-high-dark: rgba(255, 50, 50, 0.5);
    --color-type-client-background-high-light: rgba(255, 50, 50, 0.5);
    --color-type-server: rgba(212, 154, 47, 1);
    --color-type-server-background: rgba(232, 115, 0, 0.05);
    --color-type-server-background-high-dark: rgb(193, 131, 18);
    --color-type-server-background-high-light: rgba(255, 154, 50, 0.502);
    --color-mta-orange: rgba(232, 115, 0, 1);
    
    /* Override Starlight styling */
    --sl-content-width: 70rem;
}
.small-text {
    font-size: 0.7em;
}

.function-syntax,
.function-oop,
.notes-section,
.examples-section,
.changelog-section {
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
}
.preview-images {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.see-also-section {
    margin-top: 4rem;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    padding-top: 1.5rem;
}

.code-example {
    margin-bottom: 1.5rem;
}
.code-example > :first-child {
    margin-bottom: 0.5rem;
}
.code-example > :last-child {
    margin-bottom: 0;
}

/* Styling for "Client-side / Server-side / Shared" */
.side-shared {
    color: var(--color-type-shared);
}
.side-client {
    color: var(--color-type-client);
}
.side-server {
    color: var(--color-type-server);
}

.mta-keyword-link {
    color: inherit;
    text-decoration: none;
}

.mta-keyword-link:hover {
    font-weight: 100;
    text-shadow:
      0 0 5px currentColor,
      0 0 10px currentColor,
      0 0 20px currentColor;
}

.added-updated-description-box {
    display: flex;
    flex-direction: column;
    background-color: var(--sl-color-bg-nav);
    border-radius: 10px;
}

.added-updated-description-box-header {
    padding: 0.5rem 1.0rem;
    color: var(--sl-color-text);
    background-color: var(--sl-color-gray-5);
    border-radius: 10px 10px 0 0;
}

.added-updated-description-box.removed-box .added-updated-description-box-header {
    background-color: var(--color-type-client-background-high);
    color: #f85c50;
    font-weight: bold;
}

.added-updated-description-box-body {
    margin: 0;
    padding: 1rem 1rem;
}

.oop-indicator {
  display: inline-block;
  padding: 0.2rem 0.5rem;
  background-color: var(--sl-color-accent-low);
  border-radius: 0.5rem;
  font-size: 0.8rem;
  margin-left: 0.2rem;
}

.tab-buttons {
  display: flex;
  gap: 1rem;
  overflow-x: auto;
  white-space: nowrap;
}

.tab-buttons.has-scrollbar {
  padding-bottom: 1rem;
}

.tab-btn {
  padding: 0.4rem 0.8rem;
  margin: 0;
  border: 1px solid var(--sl-color-gray-4);
  background: none;
  border-radius: 10px;
  cursor: pointer;
  color: var(--sl-color-text);
  transition: background-color 0.2s ease;
}

.tab-btn.active {
  color: var(--sl-color-text);
  font-weight: bold;
}

.tab-header {
  padding: 0.5rem 1rem;
  color: var(--sl-color-text);
  text-transform: capitalize;
}

.tab-body {
  margin: 0;
  padding: 1rem;
  color: var(--sl-color-text);
}

.tab-content {
  display: flex;
  flex-direction: column;
  background-color: var(--sl-color-bg-nav) !important;
  border: 2px solid;
  box-shadow: 0.2rem 0.2rem 0.2rem #0000005b;
}

.side-client {
  background-color: var(--color-type-client-background);
  border-color: var(--color-type-client);
}

:root[data-theme='dark'] .side-client.active {
  background-color: var(--color-type-client-background-high-dark);
}

:root[data-theme='light'] .side-client.active {
  background-color: var(--color-type-client-background-high-light);
}

.side-server {
  background-color: var(--color-type-server-background);
  border-color: var(--color-type-server);
}

:root[data-theme='dark'] .side-server.active {
  background-color: var(--color-type-server-background-high-dark);
}

:root[data-theme='light'] .side-server.active {
  background-color: var(--color-type-server-background-high-light);
}

.side-shared {
  background-color: var(--color-type-shared-background);
  border-color: var(--color-type-shared);
}

:root[data-theme='dark'] .side-shared.active {
  background-color: var(--color-type-shared-background-high-dark);
}

:root[data-theme='light'] .side-shared.active {
  background-color: var(--color-type-shared-background-high-light);
}

.table {
  width: auto;
  border-collapse: collapse;
}

th, td {
  border: 1px solid var(--sl-color-gray-3);
  padding: 8px;
  text-align: center;
  color: var(--sl-color-text);
}
    
th {
  background-color: var(--sl-color-hairline);
  font-weight: bold;
}

:root[data-theme='light'] th {
  background-color: var(--sl-color-gray-5);
}

td {
  background-color: var(--sl-color-bg-inline-code);
}

